# orbit

./: .gitignore  .npmrc  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  gemini.md  index.html  package.json  vite.config.js  vite.config.ts
.claude/: hooks.json  settings.json
.claude/agents/: code-reviewer.md  ecommerce-expert.md
.claude/rules/: security.md  typescript.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yml
_docs/: conventions.md
_templates/nextjs-ecommerce/: README.md
app/: App.tsx  index.css  main.tsx
app/components/: AiPanel.tsx  AiToolManager.tsx  AiToolView.tsx  CacheManager.tsx  CliManager.tsx  ComposerManager.tsx  DatabaseViewer.tsx  DeployPanel.tsx  HostsEditorModal.tsx  InfoTooltip.tsx  LogViewer.tsx  MailManager.tsx  McpManager.tsx  MeilisearchManager.tsx  PathEditorModal.tsx  ServiceConfigDrawer.tsx  ServiceManager.tsx  ServiceOverview.tsx  SettingsManager.tsx  SitesManager.tsx  Terminal.tsx
app/lib/: AppContext.tsx  api.ts  db-api.ts  serviceIcons.ts  store.ts  terminal-commands.json  xterm-config.ts
app/lib/api/: ai-tools.ts  (+7 more)
core/: Cargo.toml  tauri.conf.json
core/capabilities/: default.json
core/src/: cli.rs  lib.rs  mcp.rs
core/src/commands/: ai_tools.rs  autostart.rs  backup.rs  blueprints.rs  cache.rs  cli.rs  composer.rs  database.rs  deploy.rs  hosts.rs  installer.rs  logs.rs  mailpit.rs  mcp.rs  meilisearch.rs  mod.rs  mongodb.rs  path.rs  pecl.rs  performance.rs  php_config.rs  php_registry.rs  requirements.rs  scanner.rs  service.rs  sites.rs  tunnel.rs  updater.rs  versions.rs  wizards.rs
core/src/services/: ai_tools.rs  apache.rs  backup.rs  blueprints.rs  cache.rs  cli.rs  composer.rs  config.rs  database.rs  deploy.rs  deploy_store.rs  download.rs  hosts.rs  logs.rs  mailpit.rs  mariadb.rs  mcp.rs  meilisearch.rs  mod.rs  mongodb.rs  nginx.rs  paths.rs  php_registry.rs  phpmyadmin.rs  postgresql.rs  process.rs  registry.rs  shared_data.rs  site_process.rs  site_store.rs  sites.rs  ssl.rs  templates.rs  terminal.rs  tunnel.rs  validation.rs  version_manager.rs
core/src/services/versions/: cache.rs  mod.rs  types.rs
docs/: index.html  script.js  style.css
docs/plans/: 2026-02-25-blueprint-gui-design.md  gemini-test-prompt.md  meilisearch-integration.md  v1.2.0-plan.md  v1.3.0-backlog.md
local-server/: LICENSE  package.json
local-server/scripts/: generate-icons.js
local-server/src/: index.css
local-server/src-tauri/: tauri.conf.json
scripts/: bump-version.cjs  bump-version.js  bump-version.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: DatabaseViewer.tsx  ErrorBoundary.tsx  LogViewer.tsx  ServiceManager.tsx  SettingsManager.tsx  SiteManager.tsx  SitesManager.tsx  TemplateEditor.tsx  ThemeSwitcher.tsx
src/lib/: ThemeContext.tsx  api.ts  db-api.ts
tests/: mcp-test.ts
(+50 files in other folders)
