[package]
name = "orbit"
version = "1.2.0"
description = "Modern local development environment - Manage Nginx, PHP, MariaDB and more"
authors = ["Orbit Dev Team"]
license = "MIT"
repository = "https://github.com/alinsgit/orbit"
homepage = "https://orbitdev.app"
edition = "2021"
rust-version = "1.77.2"
default-run = "orbit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "orbit-cli"
path = "src/cli.rs"
required-features = ["cli"]

[[bin]]
name = "orbit-mcp"
path = "src/mcp.rs"
required-features = ["mcp"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2.3.4"
tauri-plugin-store = "2.4.2"
tauri-plugin-dialog = "2"
futures-util = "0.3.31"
tokio = { version = "1.49.0", features = ["fs", "io-util", "time"] }
zip = "4.2.0"
reqwest = { version = "0.12", features = ["blocking", "json", "stream"] }
regex = "1.12.2"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tauri-plugin-sql = { version = "2", features = ["mysql", "postgres"] }
once_cell = "1.19"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
clap = { version = "4", features = ["derive"], optional = true }
colored = { version = "2", optional = true }
sysinfo = "0.29"
portable-pty = "0.8.1"

[features]
cli = ["clap", "colored"]
mcp = []

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"

[dev-dependencies]
tempfile = "3.26.0"
